src/test/ui/borrowck/borrowck-anon-fields-variant.stderr
error[E0499]: cannot borrow `y.0` as mutable more than once at a time
  --> $DIR/borrowck-anon-fields-variant.rs:34:14
   |
LL |       Foo::Y(ref mut a, _) => a,
   |              --------- first mutable borrow occurs here
...
LL |       Foo::Y(ref mut b, _) => b, //~ ERROR cannot borrow
   |              ^^^^^^^^^ second mutable borrow occurs here
...
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
